Better wording on the copy

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -156,7 +156,7 @@
 				<!--/tmpl_if -->
 			> 
 		    <label for="tracker_tracking_mode_anonymously"> 
-		     	Track using anonymous data
+		     	Using anonymized data
 		    </label>
 		
 		</div>
@@ -180,7 +180,7 @@
 	
 				> 
 			    <label for="tracker_tracking_mode_email_address"> 
-			     	Track with email addresses 
+			     	Using email addresses 
 					<!-- tmpl_unless PII_OPTIONS_allow_logging_emails_in_analytics -->
 						(Disabled)
 					<!-- /tmpl_unless -->
