Basically, here's the feature!

--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -450,10 +450,29 @@
 			</div>
 		</div> 
 		<div class="row">
-			<div class="small-12 columns">
+			<div class="small-1 columns">
+			</div>
+			<div class="small-11 columns">
 				<!-- tmpl_var list_popup_menu -->
 			</div>
 		</div>
+		
+		
+		<div class="row">
+			<div class="small-12 columns">	
+				<label for="send_new_list_welcome_email">
+					<input 
+						type="checkbox" 
+						name="send_new_list_welcome_email" 
+						id="send_new_list_welcome_email" 
+						value="1"
+						checked="checked"
+					>
+					Send welcome email to List Owner
+				</label>
+			</div>
+		</div>
+		
 	</fieldset> 
 
 <!-- /tmpl_if --> 
