This adds the option of sending out the List Password.

--- a/dada/templates/new_list_screen.tmpl
+++ b/dada/templates/new_list_screen.tmpl
@@ -444,11 +444,17 @@
 		<div class="row">
 			<div class="small-12 columns">	
 				<label for="clone_settings">
-					<input type="checkbox" name="clone_settings" id="clone_settings" value="1"  >
+					<input 
+						type="checkbox" 
+						name="clone_settings" 
+						id="clone_settings" 
+						value="1"
+					>
 					Clone settings from this mailing list: 
 				</label>
 			</div>
 		</div> 
+		
 		<div class="row">
 			<div class="small-1 columns">
 			</div>
@@ -472,6 +478,25 @@
 				</label>
 			</div>
 		</div>
+		
+		<div class="row">
+			<div class="small-1 columns">
+			</div>
+			<div class="small-11 columns">
+				<label for="send_new_list_welcome_email_with_list_pass">
+					<input 
+						type="checkbox" 
+						name="send_new_list_welcome_email_with_list_pass" 
+						id="send_new_list_welcome_email_with_list_pass" 
+						value="1"
+						checked="checked"
+					>
+					Include List Password in welcome email
+				</label>
+			</div>
+		</div>
+		
+		
 		
 	</fieldset> 
 
