--- a/dada/templates/error_captcha_challenge_failed_screen.tmpl
+++ b/dada/templates/error_captcha_challenge_failed_screen.tmpl
@@ -1,5 +1,6 @@
-<!-- begin error_unsub_invalid_email_screen.tmpl --> 
-<!-- tmpl_set name="title" value="Please fill out the CAPATCHA" -->
+<!-- begin error_captcha_challenge_failed_screen.tmpl -->
+
+<!-- tmpl_set name="title" value="Please fill out the CAPTCHA" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 <div class="alert-box warning radius"> 
@@ -12,4 +13,4 @@
 
 <!-- tmpl_include error_footer_widget.tmpl -->
 
-<!-- end error_unsub_invalid_email_screen.tmpl -->
+<!-- end error_captcha_challenge_failed_screen.tmpl --> 
