More work in getting this working correctly, including making the v2 recaptcha work when added to multiple forms on the same page.

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -283,6 +283,8 @@ $RECAPTCHA_PARAMS = {
 	v3 => {
 	    public_key        =>  '<!-- tmpl_var captcha_params_v3_public_key -->',
 	    private_key       =>  '<!-- tmpl_var captcha_params_v3_private_key -->',
+	    score_threshold   =>  '<!-- tmpl_var captcha_params_v3_score_threshold default=".5" -->',
+		
 	},
 };
 
