--- a/dada/templates/send_archive_form_widget.tmpl
+++ b/dada/templates/send_archive_form_widget.tmpl
@@ -71,9 +71,9 @@
 					</div>
 				<!-- /tmpl_if --> 
 				<!-- tmpl_if can_use_captcha --> 
-					<!-- tmpl_if CAPTCHA_string --> 
-						<!-- tmpl_var CAPTCHA_string --> 
-					<!-- /tmpl_if --> 
+					<div class="form-group">
+						<div class="g-recaptcha" id="send_archive_form_gr"></div>
+					</div>
 				<!-- /tmpl_if --> 
 			</div>
 		</div>
