--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -147,25 +147,52 @@
 		    <!-- /tmpl_loop -->
 		<!-- /tmpl_if -->
 
-		<!-- tmpl_if recaptcha_html --> 
-			<div class="row">
-				<div class="large-4 medium-4 columns">
-					&nbsp;
-				</div> 
+		<!-- tmpl_if expr="captcha_params_recaptcha_type eq 'v2'" -->
+			<!-- tmpl_if v2_captcha_string --> 
+				<div class="row">
+					<div class="large-4 medium-4 columns">
+						&nbsp;
+					</div> 
 			
-				<div class="large-8 medium-8 columns">
-					<input 
-						type="hidden"
-						 class="captcha_check required" 
-						 name="captcha_check" 
-						 id="captcha_check"
-						>
-					<!-- tmpl_var recaptcha_html -->
+					<div class="large-8 medium-8 columns">
+
+						<div class="form-group">
+							<div class="g-recaptcha" id="subscription_form_gr"></div>
+							<input 
+								type="hidden"
+								 class="captcha_check required" 
+								 name="captcha_check" 
+								 id="captcha_check"
+								>
+						</div>
+					</div>
 				</div>
-			</div>
-			<!-- tmpl_if add_recaptcha_js -->
-				    <script src='https://www.google.com/recaptcha/api.js'></script>
-			<!-- /tmpl_if --> 
+				<!-- tmpl_if add_recaptcha_js -->
+					    <script src='https://www.google.com/recaptcha/api.js'></script>
+				<!-- /tmpl_if --> 
+			<!-- /tmpl_if -->		
+		<!-- /tmpl_if -->
+		<!-- tmpl_if expr="captcha_params_recaptcha_type eq 'v3'" -->
+			
+			<input 
+				type="text"
+				id="g-recaptcha-response"
+				name="g-recaptcha-response"
+			>
+			
+			<script src="https://www.google.com/recaptcha/api.js?render=<!-- tmpl_var captcha_params_v3_public_key -->"></script>
+			<script>
+			    grecaptcha.ready(function() {
+			    // do request for recaptcha token
+			    // response is promise with passed token
+			        grecaptcha.execute('<!-- tmpl_var captcha_params_v3_public_key -->', {action:'validate_captcha'})
+			                  .then(function(token) {
+			            // add token value to form
+			            document.getElementById('g-recaptcha-response').value = token;
+			        });
+			    });
+			</script>
+				
 		<!-- /tmpl_if -->
 		
 		<div class="row">
