Getting more work done.

--- a/dada/templates/control_panel_login_form.tmpl
+++ b/dada/templates/control_panel_login_form.tmpl
@@ -103,7 +103,9 @@
 			<input 
 				type="password" 
 				name="admin_password" 
-				id="admin_password"  maxlength="24"
+				id="admin_password"
+				maxlength="24"
+				required="required"
 			>
 		</div>
 	</div>
