--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -62,18 +62,32 @@
 						>
 				
 						<div clas="row">
-							<div class="small-12 columns">
-							 	<!-- tmpl_if can_use_captcha --> 
-								    <!-- tmpl_if invalid_captcha --> 
-							            <div class="alert-box info radius"> 
-							    			CAPTCHA failed, please try again:
-							    		</div> 
-							        <!-- /tmpl_if -->
-								<!-- /tmpl_if -->	
+							<div class="small-12 columns">							 	
+							    <!-- tmpl_if invalid_captcha --> 
+						            <div class="alert-box info radius"> 
+						    			CAPTCHA failed, please try again:
+						    		</div> 
+						        <!-- /tmpl_if -->
 							</div>
 						</div> 
 				
-						<!-- tmpl_var CAPTCHA_string --> 
+						<!-- tmpl_if can_use_Google_reCAPTCHA_v2 --> 
+							<div class="form-group">
+								<div 
+									class="g-recaptcha" 
+									id="send_archive_form_gr"
+								></div>
+							</div>
+						<!-- /tmpl_if --> 
+				
+						<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->			
+							<input 
+								type="text"
+								id="g-recaptcha-response_reset_pass"
+								class="g-recaptcha-response"
+								name="g-recaptcha-response"
+							>
+						<!-- /tmpl_if -->
 						
 							<div clas="row">
 								<div class="small-12 columns">
