--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -29,6 +29,7 @@
 	   var $dm = $.noConflict(true);
 	</script>
 <!-- /tmpl_if -->
+	   
 <!-- tmpL_if can_use_Google_reCAPTCHA_v2 -->
    	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
    	 <script type="text/javascript" charset="utf-8">
@@ -36,14 +37,31 @@
    	         var recaptchas = document.querySelectorAll('div[class=g-recaptcha]');
    	         for( i = 0; i < recaptchas.length; i++) {
    	             grecaptcha.render( recaptchas[i].id, {
-   	             'sitekey' : '6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI',
+   	             'sitekey' : '<!-- tmpl_var captcha_params_v2_public_key -->',
    	             });
    	         }
    	     }
    	 </script>
-	   
 <!-- /tmpl_if -->
-
+<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->
+	<script src="https://www.google.com/recaptcha/api.js?render=<!-- tmpl_var captcha_params_v3_public_key -->"></script>
+	<script>
+		    grecaptcha.ready(function() {
+			  grecaptcha
+			    .execute("<!-- tmpl_var captcha_params_v3_public_key -->", {
+			      action: "ddm"
+			    })
+			    .then(function(token) {
+			      document
+			        .querySelectorAll(".g-recaptcha-response")
+			        .forEach(elem => (elem.value = token))
+			      ;
+			    });
+		    });
+	</script>
+<!-- /tmpl_if -->
+	
+	
 
 
 <!-- tmpl_if list_settings.show_archives --> 
