--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -147,8 +147,8 @@
 		    <!-- /tmpl_loop -->
 		<!-- /tmpl_if -->
 
-		<!-- tmpl_if expr="captcha_params_recaptcha_type eq 'v2'" -->
-			<!-- tmpl_if v2_captcha_string --> 
+		<!-- tmpl_if comment -->This also needs to look at if the sub form should have captcha...<!-- /tmpl_if -->
+		<!-- tmpl_if can_use_Google_reCAPTCHA_v2 -->
 				<div class="row">
 					<div class="large-4 medium-4 columns">
 						&nbsp;
@@ -170,29 +170,15 @@
 				<!-- tmpl_if add_recaptcha_js -->
 					    <script src='https://www.google.com/recaptcha/api.js'></script>
 				<!-- /tmpl_if --> 
-			<!-- /tmpl_if -->		
 		<!-- /tmpl_if -->
-		<!-- tmpl_if expr="captcha_params_recaptcha_type eq 'v3'" -->
-			
+		
+		<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->			
 			<input 
 				type="text"
-				id="g-recaptcha-response"
+				id="g-recaptcha-response_sf"
+				class="g-recaptcha-response"
 				name="g-recaptcha-response"
 			>
-			
-			<script src="https://www.google.com/recaptcha/api.js?render=<!-- tmpl_var captcha_params_v3_public_key -->"></script>
-			<script>
-			    grecaptcha.ready(function() {
-			    // do request for recaptcha token
-			    // response is promise with passed token
-			        grecaptcha.execute('<!-- tmpl_var captcha_params_v3_public_key -->', {action:'validate_captcha'})
-			                  .then(function(token) {
-			            // add token value to form
-			            document.getElementById('g-recaptcha-response').value = token;
-			        });
-			    });
-			</script>
-				
 		<!-- /tmpl_if -->
 		
 		<div class="row">
