Things should work on, and only on screens that need captcha. If not, the captcha code is not loaded.

--- a/dada/templates/list_template_header_code_block.tmpl
+++ b/dada/templates/list_template_header_code_block.tmpl
@@ -29,37 +29,56 @@
 	   var $dm = $.noConflict(true);
 	</script>
 <!-- /tmpl_if -->
-	   
-<!-- tmpL_if can_use_Google_reCAPTCHA_v2 -->
-   	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
-   	 <script type="text/javascript" charset="utf-8">
-   	     var onloadCallback = function() {
-   	         var recaptchas = document.querySelectorAll('div[class=g-recaptcha]');
-   	         for( i = 0; i < recaptchas.length; i++) {
-   	             grecaptcha.render( recaptchas[i].id, {
-   	             'sitekey' : '<!-- tmpl_var captcha_params_v2_public_key -->',
-   	             });
-   	         }
-   	     }
-   	 </script>
-<!-- /tmpl_if -->
-<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->
-	<script src="https://www.google.com/recaptcha/api.js?render=<!-- tmpl_var captcha_params_v3_public_key -->"></script>
-	<script>
-		    grecaptcha.ready(function() {
-			  grecaptcha
-			    .execute("<!-- tmpl_var captcha_params_v3_public_key -->", {
-			      action: "ddm"
-			    })
-			    .then(function(token) {
-			      document
-			        .querySelectorAll(".g-recaptcha-response")
-			        .forEach(elem => (elem.value = token))
-			      ;
-			    });
-		    });
-	</script>
-<!-- /tmpl_if -->
+
+<!-- tmpl_if load_captcha_js -->
+	<!-- tmpL_if can_use_Google_reCAPTCHA_v2 -->
+	   	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+	   	 <script type="text/javascript" charset="utf-8">
+			 var recaptcha_ids = []; 
+	   	 	var onloadCallback = function() {
+				var recaptchas = document.querySelectorAll('div[class=g-recaptcha]');
+				for ( i = 0; i < recaptchas.length; i++) {
+					
+					alert('putting recaptcha on: ' + recaptchas[i].id);
+					alert('site key: ' + '<!-- tmpl_var captcha_params_v2_public_key -->')
+					
+					recaptcha_ids[i] = grecaptcha.render( 
+						recaptchas[i].id, 
+						{
+							'sitekey' : '<!-- tmpl_var captcha_params_v2_public_key -->'
+						}
+					);
+				}
+			}
+						
+			function setup_recaptcha() {					
+				for ( i = 0; i < recaptcha_ids.length; i++) {
+						grecaptcha.reset(recaptcha_ids[i].id);
+				}	
+			}
+
+	   	 </script>
+	<!-- /tmpl_if -->
+	<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->
+		<script src="https://www.google.com/recaptcha/api.js?render=<!-- tmpl_var captcha_params_v3_public_key -->"></script>
+		<script>
+			    grecaptcha.ready(function() { setup_recaptcha() }); 
+				
+				function setup_recaptcha() {
+					grecaptcha.execute("<!-- tmpl_var captcha_params_v3_public_key -->", {
+				      action: "ddm"
+				    })
+				    .then(function(token) {
+				      document
+				        .querySelectorAll(".g-recaptcha-response")
+				        .forEach(elem => (elem.value = token))
+				      ;
+				    });
+			    }
+				
+		</script>
+	<!-- /tmpl_if -->
+<!-- /tmpl_if -->	
 	
 	
 
