--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -157,7 +157,10 @@
 					<div class="large-8 medium-8 columns">
 
 						<div class="form-group">
-							<div class="g-recaptcha" id="subscription_form_gr"></div>
+							<div 
+								class="g-recaptcha"
+								id="subscription_form_gr"
+							></div>
 							<input 
 								type="hidden"
 								 class="captcha_check required" 
