--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -3,6 +3,9 @@
 
 <!-- tmpl_set name="title" value="Administration" --> 
 <!-- tmpl_set name="show_profile_widget" value="0" --> 
+<!-- tmpl_set name="load_captcha_js" value="1" --> 
+
+
 
 <p>&nbsp;</p>
 
