--- a/dada/templates/list_archive_index_screen.tmpl
+++ b/dada/templates/list_archive_index_screen.tmpl
@@ -2,6 +2,7 @@
 
 <!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name --> Archives" --> 
 <!-- tmpl_set name="load_colorbox" value="1" -->
+<!-- tmpl_set name="load_captcha_js" value="1" -->
 
 <!-- tmpl_include list_breadcrumbs_widget.tmpl -->
 
