--- a/dada/templates/rest_subscribe_demo.tmpl
+++ b/dada/templates/rest_subscribe_demo.tmpl
@@ -3,7 +3,8 @@
 <!-- tmpl_set name="title" value="RESTful/Ajax Demo" --> 
 
 <!-- tmpl_set name="load_colorbox" value="1" --> 
-	
+<!-- tmpl_set name="load_captcha_js" value="1" -->
+
 <!-- tmpl_var subscription_form -->
 
 <!-- end rest_subscribe_demo -->
