--- a/dada/templates/subscribe_landing.tmpl
+++ b/dada/templates/subscribe_landing.tmpl
@@ -1,6 +1,7 @@
 <!-- begin subscription_form.tmpl -->
 <!-- tmpl_set name="title" value="Subscribe to, <!-- tmpl_var list_settings.list_name -->" -->
 <!-- tmpl_set name="load_colorbox" value="1" -->
+<!-- tmpl_set name="load_captcha_js" value="1" -->
 
 <div class="row">
 	<div class="large-8 medium-8 large-centered medium-centered columns">
