Who knew this was going to be such a proj?

--- a/dada/templates/admin_screen.tmpl
+++ b/dada/templates/admin_screen.tmpl
@@ -78,7 +78,7 @@
 							<div class="form-group">
 								<div 
 									class="g-recaptcha" 
-									id="send_archive_form_gr"
+									id="reset_pass_gr"
 								></div>
 							</div>
 						<!-- /tmpl_if --> 
