--- a/dada/templates/list_login_form.tmpl
+++ b/dada/templates/list_login_form.tmpl
@@ -2,6 +2,7 @@
 
 <!-- tmpl_set name="title" value="Log into <!-- tmpl_var list_settings.list_name -->" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
+<!-- tmpl_set name="load_captcha_js" value="1" --> 
 
 
 
