--- a/dada/templates/minimal_subscription_form.tmpl
+++ b/dada/templates/minimal_subscription_form.tmpl
@@ -50,12 +50,7 @@
 <!-- /tmpl_loop -->
 <!-- /tmpl_if -->
 
-<!-- tmpl_if recaptcha_html --> 
-<!-- tmpl_var recaptcha_html -->
-<!-- tmpl_if add_recaptcha_js -->
-<script src='https://www.google.com/recaptcha/api.js'></script>
-<!-- /tmpl_if -->
-<!-- /tmpl_if -->
+<!-- tmpl_include subscription_captcha_code_widget.tmpl -->
 <input type="submit" class="button" value="Subscribe">
 
 <!-- tmpl_unless list_settings.private_list -->
