--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -30,9 +30,6 @@
 <link rel="stylesheet" type="text/css" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/jquery/tablesorter/theme.default.css?v=<!-- tmpl_var VER escape=URL -->"/ >
 
 
-
-
-
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/clipboard.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/spin.min.js?v=<!-- tmpl_var VER escape=URL -->"></script>
 
@@ -76,6 +73,45 @@
 		<!-- TinyMCE is NOT being used. -->
 	<!-- /tmpl_if -->
 <!-- /tmpl_if --> 
+	
+	
+	<!-- tmpl_if load_captcha_js -->
+		<!-- tmpL_if can_use_Google_reCAPTCHA_v2 -->
+		   	<script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&render=explicit" async defer></script>
+		   	<script type="text/javascript" charset="utf-8">
+				 var onloadCallback = function() {
+					 var recaptchas = document.querySelectorAll('div[class=g-recaptcha]');
+					 for ( i = 0; i < recaptchas.length; i++) {		
+						grecaptcha.render( 
+							recaptchas[i].id, 
+							{
+								'sitekey' : '<!-- tmpl_var captcha_params_v2_public_key -->'
+							}
+						);					
+					}
+				}		
+		   	 </script>
+		<!-- /tmpl_if -->
+		<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->
+			<script src="https://www.google.com/recaptcha/api.js?render=<!-- tmpl_var captcha_params_v3_public_key -->"></script>
+			<script>
+				    grecaptcha.ready(function() { 
+							setup_recaptcha() 
+					}); 
+					function setup_recaptcha() {
+						grecaptcha.execute("<!-- tmpl_var captcha_params_v3_public_key -->", {
+					      action: "ddm"
+					    })
+					    .then(function(token) {
+					      document
+					        .querySelectorAll(".g-recaptcha-response")
+					        .forEach(elem => (elem.value = token));
+					    });
+				    }
+			</script>
+		<!-- /tmpl_if -->
+	<!-- /tmpl_if -->
+	
 
 	<link rel="stylesheet" href="<!-- tmpl_var SUPPORT_FILES_URL -->/static/css/vendor/colorbox/colorbox.css?v=<!-- tmpl_var VER escape=URL -->">
 	<script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/vendor/jquery/colorbox/jquery.colorbox-min.js?v=<!-- tmpl_var VER escape=URL -->"></script>    	
