--- a/dada/templates/control_panel_login_form.tmpl
+++ b/dada/templates/control_panel_login_form.tmpl
@@ -109,6 +109,32 @@
 			>
 		</div>
 	</div>
+	
+ <div class="row">
+	<div class="small-12 columns">
+		<!-- tmpl_if can_use_Google_reCAPTCHA_v2 --> 
+			<div class="form-group">
+				<div 
+					class="g-recaptcha" 
+					id="cp_login_gr"
+				></div>
+			</div>
+		<!-- /tmpl_if --> 
+
+		<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->			
+			<input 
+				type="hidden"
+				id="g-recaptcha-response_cp_login"
+				class="g-recaptcha-response"
+				name="g-recaptcha-response"
+			>
+		<!-- /tmpl_if -->
+	</div> 
+</div>
+
+	
+	
+	
 	 <div class="row">
  		<div class="small-12 columns">
 			<input 
