--- a/dada/templates/create_new_mailing_list_form.tmpl
+++ b/dada/templates/create_new_mailing_list_form.tmpl
@@ -35,6 +35,31 @@
 				>
 			</div>
 		</div>
+		
+		
+		 <div class="row">
+			<div class="small-12 columns">
+				<!-- tmpl_if can_use_Google_reCAPTCHA_v2 --> 
+					<div class="form-group">
+						<div 
+							class="g-recaptcha" 
+							id="create_new_list_gr"
+						></div>
+					</div>
+				<!-- /tmpl_if --> 
+
+				<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->			
+					<input 
+						type="hidden"
+						id="g-recaptcha-response_create_new_list"
+						class="g-recaptcha-response"
+						name="g-recaptcha-response"
+					>
+				<!-- /tmpl_if -->
+			</div> 
+		</div>
+		
+		
 		<div class="row">
 			<div class="small-12 columns">
 				<input 
