--- a/dada/templates/error_captcha_challenge_failed_screen.tmpl
+++ b/dada/templates/error_captcha_challenge_failed_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin error_captcha_challenge_failed_screen.tmpl -->
 
-<!-- tmpl_set name="title" value="Please fill out the CAPTCHA" -->
+<!-- tmpl_set name="title" value="reCAPTCHA Failed." -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 <div class="alert-box warning radius"> 
