Removed the inline'd preview of the subscription forms, and put them on their own screen. This is mostly because showing so many captchas on one screen is a little problematic .

--- a/dada/templates/html_code_screen.tmpl
+++ b/dada/templates/html_code_screen.tmpl
@@ -77,12 +77,17 @@
 				</div>
 			</div> 
 		
-			<fieldset>
-				<legend>
-					Working Preview
-			</legend>
-			<!-- tmpl_var minimal_subscription_form -->
-			</fieldset>
+	  	 		<div class="row">
+	  	   		  <div class="small-6 small-centered columns">
+	  	 				 <a 
+	  	 				 	href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=preview_minimal_subscription_form"
+	  	 					class="button success preview_minimal_subscription_form expand"
+	  	 					target="_blank"
+	  	 				>
+	  	 					 	View Working Preview...
+	  	  				</a>
+	  	   		  </div>
+	  	 	  </div>
 		</div> 
 	
 		<div class="content" id="full"> 
@@ -106,10 +111,17 @@
 					<textarea readonly id="full_subscription_form" name="full_subscription_form" cols="50" rows="12"><!-- tmpl_var subscription_form escape="HTML" --> </textarea>
 			</div>
 		</div>
-		    <fieldset>
-		    <legend>
-		    Working Preview</legend>
-		    <!-- tmpl_var subscription_form  -->
+	 		<div class="row">
+	   		  <div class="small-6 small-centered columns">
+	 				 <a 
+	 				 	href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=preview_subscription_form"
+	 					class="button success preview_subscription_form expand"
+	 					target="_blank"
+	 				>
+	 					 	View Working Preview...
+	  				</a>
+	   		  </div>
+	 	  </div>
 		</div> 
 	
 		<div class="content tab-title" id="modal_menu"> 
