--- a/dada/templates/new_list_created_screen.tmpl
+++ b/dada/templates/new_list_created_screen.tmpl
@@ -131,7 +131,13 @@
 			   <label for="admin_password">
 			   	 List Password/<!-- tmpl_var PROGRAM_NAME --> Root Password:
 			   </label>
-			    <input type="password" name="admin_password" id="admin_password" maxlength="24" >
+			    <input 
+					type="password" 
+					name="admin_password" 
+					id="admin_password" 
+					maxlength="24"
+					required="required"
+				>
 			</div>
 		</div>
 		<div class="row">
