--- a/dada/templates/send_archive_form_widget.tmpl
+++ b/dada/templates/send_archive_form_widget.tmpl
@@ -60,40 +60,39 @@
 			</div>
 		</div> 
 		
-		<div class="row">
-			<div class="large-3 medium-3 columns">
-				&nbsp;
+		<!-- tmpl_if list_settings.captcha_archive_send_form -->
+			<div class="row">
+				<div class="large-3 medium-3 columns">
+					&nbsp;
+				</div>
+				<div class="large-9 medium-9 columns">			
+					<!-- tmpl_if captcha_fail --> 
+						<div class="alert-box warning radius">
+							reCAPTCHA failed.
+						</div>
+					<!-- /tmpl_if --> 
+				
+				
+					<!-- tmpl_if can_use_Google_reCAPTCHA_v2 --> 
+						<div class="form-group">
+							<div 
+								class="g-recaptcha" 
+								id="send_archive_form_gr"
+							></div>
+						</div>
+					<!-- /tmpl_if --> 
+				
+					<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->			
+						<input 
+							type="hidden"
+							id="g-recaptcha-response_saf"
+							class="g-recaptcha-response"
+							name="g-recaptcha-response"
+						>
+					<!-- /tmpl_if -->
+				</div>
 			</div>
-			<div class="large-9 medium-9 columns">			
-				<!-- tmpl_if captcha_fail --> 
-					<div class="alert-box warning radius">
-						reCAPTCHA failed.
-					</div>
-				<!-- /tmpl_if --> 
-				
-				<!-- tmpl_if can_use_Google_reCAPTCHA_v2 --> 
-					<div class="form-group">
-						<div 
-							class="g-recaptcha" 
-							id="send_archive_form_gr"
-						></div>
-					</div>
-				<!-- /tmpl_if --> 
-				
-				<!-- tmpl_if can_use_Google_reCAPTCHA_v3 -->			
-					<input 
-						type="hidden"
-						id="g-recaptcha-response_saf"
-						class="g-recaptcha-response"
-						name="g-recaptcha-response"
-					>
-				<!-- /tmpl_if -->
-				
-				
-			
-			
-			</div>
-		</div>
+		<!-- /tmpl_if -->
 		
 		<div class="row">
 			<div class="large-3 medium-3 columns">
