--- a/dada/templates/subscription_form_widget.tmpl
+++ b/dada/templates/subscription_form_widget.tmpl
@@ -147,7 +147,7 @@
 		    <!-- /tmpl_loop -->
 		<!-- /tmpl_if -->
 
-		<!-- tmpl_if captcha_params_on_subscribe_form -->
+		<!-- tmpl_if list_settings.enable_captcha_on_initial_subscribe_form -->
 			<!-- tmpl_if can_use_Google_reCAPTCHA_v2 -->
 					<div class="row">
 						<div class="large-4 medium-4 columns">
